--- a/credit_card_fraud_detection_2_0.ipynb
+++ b/credit_card_fraud_detection_2_0.ipynb
@@ -14,10 +14,9 @@
         "QTGAj-0toAjG",
         "eyMrbAY5Knzn",
         "afq9C1gZKu1a",
-        "Oa3yaUoM_d2F",
-        "rpyR6woBL30b"
+        "Oa3yaUoM_d2F"
       ],
-      "authorship_tag": "ABX9TyOkJezMpj9m9++hIQzzdXRD",
+      "authorship_tag": "ABX9TyMd0oxuwlJQeSphYRnYVD2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +235,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*We will apply softmax regression because it is a multi-class regression problem statement*"
+        "*We will apply softmax regression although it is used with multi-class classification problem statement*"
       ],
       "metadata": {
         "id": "MzUhP1bir5GZ"
@@ -572,13 +571,21 @@
         "X.dropna(inplace=True)\n",
         "y.dropna(inplace=True)\n",
         "\n",
-        "smote = SMOTE(random_state=42)\n",
+        "smote = SMOTE(random_state=42,k_neighbors=5)\n",
         "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
         "\n",
         "print(\"X_resampled: \", X_resampled)\n",
-        "print(\"y_resampled: \", y_resampled)\n",
-        "\n",
-        "\n",
+        "print(\"y_resampled: \", y_resampled)"
+      ],
+      "metadata": {
+        "id": "OyqX9A5LmgXB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#For Feature importance\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "rf = RandomForestClassifier(random_state=42)\n",
@@ -632,6 +639,34 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#created a dataframe based on X_selected and y_selected\n",
+        "X_selected_new=X_selected\n",
+        "X_selected_new['Class']=y_selected\n",
+        "X_selected_new.sample(10)"
+      ],
+      "metadata": {
+        "id": "7BdzfRN13TyZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import plotly.express as px\n",
+        "fig=px.scatter_3d(X_selected_new,x='V14',y='V12',z='V10',color='Class')\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "DkBuEjzh5P8-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "*splitting the data into training set and test set*"
@@ -670,13 +705,15 @@
         "X_test_scaled=scalar.transform(X_test)\n",
         "\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import confusion_matrix\n",
         "\n",
         "#using multi-class as multinomial the LogisticRegression becomes SOFTMAX REGRESSION\n",
         "LoR=LogisticRegression(multi_class='multinomial',max_iter=1000)\n",
         "LoR.fit(X_train_scaled,y_train)\n",
         "y_pred_lor=LoR.predict(X_test_scaled)\n",
         "print(accuracy_score(y_pred_lor,y_test))\n",
-        "print(classification_report(y_pred_lor,y_test))"
+        "print(classification_report(y_pred_lor,y_test))\n",
+        "print(confusion_matrix(y_pred_lor,y_test))"
       ],
       "metadata": {
         "id": "GDLwOO8VLJuL"
@@ -685,10 +722,296 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "* The accuracy is 1 for Logistic Regression(Softmax)\n",
+        "* The precison and recall for both fraud and non-fraud is one that means that the model correctly classifies all the positive and neagtive instances\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VcZ9Cd_31UG4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Plotting RoC Curve**\n",
+        "\n",
+        "*RoC curve is the graph of FPR Vs TPR*\n",
+        "\n",
+        "*   FPR is False Positive Rate\n",
+        "*   TPR is True positive Rate"
+      ],
+      "metadata": {
+        "id": "z6qrp9P0nPla"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#calculating and fetching probablities for each input\n",
+        "y_score=LoR.predict_proba(X_test)[:,1]\n",
+        "\n",
+        "\n",
+        "#import RoC from sklearn\n",
+        "from sklearn.metrics import roc_curve\n",
+        "fpr,tpr,threshold=roc_curve(y_test,y_score)"
+      ],
+      "metadata": {
+        "id": "PYoT8A8PmIPi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*plotting RoC Curve*"
+      ],
+      "metadata": {
+        "id": "b6tepjlUuG6K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import plotly.graph_objects as go\n",
+        "import numpy as np\n",
+        "\n",
+        "#generate a trace for ROC Curve\n",
+        "trace0=go.Scatter(\n",
+        "    x=fpr,\n",
+        "    y=tpr,\n",
+        "    mode='lines',\n",
+        "    name='RoC curve'\n",
+        ")\n",
+        "\n",
+        "# Only label every nth point to avoid cluttering\n",
+        "n = 10\n",
+        "indices = np.arange(len(threshold)) % n == 0  # Choose indices where index mod n is 0\n",
+        "\n",
+        "trace1 = go.Scatter(\n",
+        "    x=fpr[indices],\n",
+        "    y=tpr[indices],\n",
+        "    mode='markers+text',\n",
+        "    name='Threshold points',\n",
+        "    text=[f\"Thr={thr:.2f}\" for thr in threshold[indices]],\n",
+        "    textposition='top center'\n",
+        ")\n",
+        "\n",
+        "\n",
+        "# Diagonal line\n",
+        "trace2 = go.Scatter(\n",
+        "    x=[0, 1],\n",
+        "    y=[0, 1],\n",
+        "    mode='lines',\n",
+        "    name='Random (Area = 0.5)',\n",
+        "    line=dict(dash='dash')\n",
+        ")\n",
+        "\n",
+        "data = [trace0, trace1, trace2]\n",
+        "\n",
+        "\n",
+        "#define layout  with square aspect ration\n",
+        "layout=go.Layout(\n",
+        "    title='RECEIVER OPERATOR CHARACTERSTICS CURVE',\n",
+        "    xaxis=dict(title='False positive curve'),\n",
+        "    yaxis=dict(title='True Positive Curve'),\n",
+        "    autosize=False,\n",
+        "    width=800,\n",
+        "    height=800,\n",
+        "    showlegend=True\n",
+        ")\n",
+        "\n",
+        "#define figure and add data\n",
+        "fig=go.Figure(data=data,layout=layout)\n",
+        "\n",
+        "#show figure\n",
+        "fig.show()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "L5FlTyK4psIv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# K Nearest Neighbours"
+      ],
+      "metadata": {
+        "id": "iPeIQ-TJjQBu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Although KNN is not the favourable for large dataset- high latency *"
+      ],
+      "metadata": {
+        "id": "mg9XeQQkKJwo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "scalar=StandardScaler()\n",
+        "\n",
+        "X_train=scalar.fit_transform(X_train)\n",
+        "X_test=scalar.transform(X_test)\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "#no is neighbours is 5 - default config.\n",
+        "knn=KNeighborsClassifier()\n",
+        "\n",
+        "knn.fit(X_train,y_train)\n",
+        "y_pred=knn.predict(X_test)\n",
+        "\n",
+        "print(accuracy_score(y_pred,y_test))"
+      ],
+      "metadata": {
+        "id": "Yv1a1dAkM5ui"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*The accuracy is 1 for the KNN*"
+      ],
+      "metadata": {
+        "id": "_xxHjTbW1FF6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ELBOW METHOD**\n",
+        "\n",
+        "**Now we will plot the graph for accuracy and k_neighbours**"
+      ],
+      "metadata": {
+        "id": "ovet9tA82Sur"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores=[]\n",
+        "\n",
+        "for i in range(1, 16):\n",
+        "  knn=KNeighborsClassifier(n_neighbors=i)\n",
+        "  knn.fit(X_train,y_train)\n",
+        "  y_pred=knn.predict(X_test)\n",
+        "  scores.append(accuracy_score(y_pred,y_test))\n",
+        "\n",
+        "print(scores)"
+      ],
+      "metadata": {
+        "id": "awi6aebl1CBr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*It is perfectly working fine with all the n_neighbours so it is ok to go with the default configuration(which is 5 as per the documentation)*"
+      ],
+      "metadata": {
+        "id": "Zgg5UsDn3SyM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*We can also plot a graph however in this case we will get a stright line parallel to X-axis*"
+      ],
+      "metadata": {
+        "id": "617FeYKo3oRU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.title('Graph of n_neighbours vs accuracy')\n",
+        "plt.plot(range(1,16),scores)\n",
+        "plt.xlabel('n_neighbours')\n",
+        "plt.ylabel('accuracy')\n",
+        "plt.legend()"
+      ],
+      "metadata": {
+        "id": "FLMpsNX03Bbt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Support Vector Machine(SVM)"
+      ],
+      "metadata": {
+        "id": "PiutktLy414p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Yv1a1dAkM5ui"
+        "id": "DqwfwKrK5Guo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Naive Bayees"
+      ],
+      "metadata": {
+        "id": "H2woJtRt5Av-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# assign test data size 25%\n",
+        "X_train, X_test, y_train, y_test =train_test_split(X,y,test_size= 0.3, random_state=0)\n",
+        "\n",
+        "# importing standard scaler\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "# scalling the input data\n",
+        "sc_X = StandardScaler()\n",
+        "X_train = sc_X.fit_transform(X_train)\n",
+        "X_test = sc_X.fit_transform(X_test)\n",
+        "\n",
+        "# import Gaussian Naive Bayes classifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "# create a Gaussian Classifier\n",
+        "classifer1 = GaussianNB()\n",
+        "# training the model\n",
+        "classifer1.fit(X_train, y_train)\n",
+        "# testing the model\n",
+        "y_pred1 = classifer1.predict(X_test)\n",
+        "\n",
+        "# importing accuracy score\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "print(classification_report(y_test, y_pred1))\n",
+        "print(confusion_matrix(y_test, y_pred1))\n",
+        "print(accuracy_score(y_test, y_pred1))"
+      ],
+      "metadata": {
+        "id": "e9R4plE232na"
       },
       "execution_count": null,
       "outputs": []
